static/css/style.css
/* Reset default margin and padding */
body, html {
	padding: 0;
}

/* Define the clickable button container */
.upload-button {
	position: fixed;
	top: 60%;
	left: 50px;
	transform: translateY(-50%);
	cursor: pointer;
}

/* Define the border */
.border {
	width: 60px;
	height: 60px;
	background-color: #0090FF;
	border-radius: 50%;
	display: flex;
	justify-content: center;
	align-items: center;
	box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
}

/* Style the icon inside the button */
.plus-icon {
	width: 24px;
	height: 24px;
	color: white;
	position: fixed;
	right: 17px;
	top: 30%;
}

/* Define the logo container */
.logo {
	position: fixed;
	top: 0;
	left: 0;
	width: 100%;
	background-color: #ffffff; /* Background color of the logo container */
	box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
	display: flex;
	justify-content: center;
	align-items: center;
}

/* Style the logo image */
.logo-img {
	max-width: 200px; /* Set the maximum width of the logo */
	height: auto; /* Maintain aspect ratio */
	padding: 45px; /* Add some padding around the logo */
}

/* Define the container for all image containers */
.container {
	margin-top: 20px;
	padding: 10px;
	max-width: 400px;
	margin: 0 auto;
	text-align: center;
}

/* Style the scrollable vertical container for image containers */
.image-containers {
	overflow-y: auto;
	max-height: 100%;
	margin-top: 150px;
	overflow-x: hidden;
	border-right: 1px solid #ccc;
	border-left: 1px solid #ccc;
}

/* Style each image container */
.image-container{
	border: 1px solid #ddd;
	padding: 0px;
	margin-bottom: 15px;
	gap: 10px;
	text-align: center;
	width: 100%;
    background-color: #f0f0f0;
    cursor: pointer;
    transition: background-color 0.3s ease;
}

/* Style the image inside the container */
.container-image {
	max-width: 100%;
	height: auto;
}

.changeFontClass {
    font-family: "Gill Sans", "Gill Sans MT";
    font-size: 14px;
	color: #9E9E9E;
}

p1 {
   text-align: center;
   position: fixed;
   top: 120px;
	margin: 0 auto;
	width: 100%;
	font-family: "Gill Sans", "Gill Sans MT", "Myriad Pro", "DejaVu Sans Condensed", Helvetica, Arial, "sans-serif";
	font-weight: 550;
	background-color: white;
}

b {
	color: dodgerblue;
	border-bottom: 2px solid dodgerblue;
}

/* Styles for the pop-up window */
.popup {
    display: none;
    position: fixed;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    background-color: rgba(0, 0, 0, 0.7);
    z-index: 1000;
}

/* Styles for the pop-up content */
.popup-content {
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    background-color: white;
    padding: 20px;
    border-radius: 5px;
    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2);
    text-align: center;
}

/* Style for the close button */
#close-popup {
    background-color: dodgerblue;
    color: white;
    border: none;
    padding: 8px 16px;
    border-radius: 5px;
    cursor: pointer;
    position: absolute;
    bottom: 10px; /* Adjust the desired distance from the bottom */
    left: 50%; /* Position horizontally at 50% */
    transform: translateX(-50%); /* Center horizontally */
}

/* Additional styles for the pop-up image content */
#popup-image {
    max-width: 100%;
    max-height: 80vh;
}

